@@ -21,19 +21,11 @@ use warnings;
 use lib qw(../lib);
 use Math::BigNum qw(:constant);
 
-#
-## Logarithmic integral
-#
-sub Li {
-    my ($n) = @_;
-    log($n)->eint;
-}
-
 foreach my $n (1 .. 10) {
     my $x = 10**$n;
 
-    my $f1 = ($x**2)->idiv(($x+1)->lngamma);
-    my $f2 = Li($x)->int;
+    my $f1 = ($x**2)->idiv(($x + 1)->lngamma);
+    my $f2 = int $x->li;
 
     say "PI($x) =~ ", $f1, ' =~ ', $f2;
 }
